# evm_ic_bridge

./: Cargo.toml  README.md  deploy.sh  dfx.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
scripts/: build-bridge.sh  deploy-all.sh
src/backend/: Cargo.toml  build.rs
src/backend/src/: init_upgrade.rs  lib.rs  siwe.rs
src/backend/src/eth/: liquidity.rs  mod.rs
src/backend/src/eth/rpc/: eth_liquidity_create_position.rs  eth_register_address.rs  mod.rs
src/backend/src/eth_pool/: eth_pool_manager.rs  eth_pool_state_transitions.rs  eth_pool_types.rs  mod.rs  state.rs  types.rs
src/backend/src/eth_pool/controller/: eth_pool_create_position.rs
src/backend/src/event/: event_processor.rs  event_publisher.rs  event_types.rs  mod.rs
src/backend/src/evm/: utils.rs
src/backend/src/init/: init_manager.rs  init_state_transitions.rs  mod.rs
src/backend/src/init/controller/: init.rs  post_upgrade.rs
src/backend/src/init/types/: mod.rs
src/backend/src/state/: mod.rs  state_types.rs
src/backend/src/state/transitions/: mod.rs
src/backend/src/user/: mod.rs  types.rs  user_manager.rs  user_state_transitions.rs  user_types.rs  user_utils.rs  util.rs
src/backend/src/user/controller/: mod.rs  user_create.rs  user_register_eth_address.rs
src/backend/src/user/rpc/: user_get_by_eth_address.rs
src/bridge/src/: lib.rs
src/bridge/src/declarations/: ic_siwe_provider.rs
src/bridge/src/event/: event_types.rs
src/bridge/src/init/: init_types.rs
src/bridge/src/state/: mod.rs
src/frontend/: main.tsx
(+5 files in other folders)
